--- a/.gitignore
+++ b/.gitignore
@@ -125,8 +125,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+.idea/
+
 /scipts/fuck_weibo_pc_log_in/weibo_pc_accounts/
 /scipts/hack_hh0876/
 
-# Project exclude paths
-/env_py3/
